hphp/test/slow/variadic_args/lambdas_multiple_variadics_2.php.expectf
Fatal error: A variadic parameter ('...') may only appear at the end of a parameter list. in %s/test/slow/variadic_args/lambdas_multiple_variadics_2.php on line 6